[Silicon]: added few sentences on Landau, Geant4. To complete with the Bichsel model.

--- a/CLICdp_definitions.sty
+++ b/CLICdp_definitions.sty
@@ -79,12 +79,14 @@
 \newcommand{\microwatt}{\ensuremath{\upmu\mathrm{W}}\xspace}
 \newcommand{\ev}{\ensuremath{\mathrm{\,e\kern -0.1em V}}\xspace}
 \newcommand{\kev}{\ensuremath{\mathrm{\,ke\kern -0.1em V}}\xspace}
+\newcommand{\mev}{\ensuremath{\mathrm{\,Me\kern -0.1em V}}\xspace}
 \newcommand{\gev}{\ensuremath{\mathrm{\,Ge\kern -0.1em V}}\xspace}
 \newcommand{\tev}{\ensuremath{\mathrm{\,Te\kern -0.1em V}}\xspace}
 \newcommand{\pev}{\ensuremath{\mathrm{\,Pe\kern -0.1em V}}\xspace}
 \newcommand{\megahertz}{\ensuremath{\mathrm{MHz}}\xspace}
 \newcommand{\cmsquared}{\ensuremath{\text{cm}^{2}}\xspace}
 \newcommand{\inversecmcubic}{\ensuremath{\text{cm}^{-3}}\xspace}
+\newcommand{\inversecmsquared}{\ensuremath{\text{cm}^{-2}}\xspace}
 
 %% text shortcuts
 \newcommand{\eg}{e.g.\xspace}
