--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -37,6 +37,7 @@
 % nalipour packages
 \usepackage{amsmath,mathtools}
 \RequirePackage[capitalise,noabbrev]{cleveref} % For the cref (clever reference)
+\usepackage{braket}
 %------------------------------------------------------------------------------
 % Instead of colouring  links, cites, table of contents etc.
 % put them in a coloured box for the screen version.
