--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -242,3 +242,17 @@ keywords = "Global least-squares fit "
       pages          = "201-205",
       SLACcitation   = "%%CITATION = JOPYA,8,201;%%"
 }
+
+
+
+@article{Vavilov:1957zz,
+      author         = "Vavilov, P. V.",
+      title          = "{Ionization losses of high-energy heavy particles}",
+      journal        = "Sov. Phys. JETP",
+      volume         = "5",
+      year           = "1957",
+      pages          = "749-751",
+      %note           = "[Zh. Eksp. Teor. Fiz.32,920(1957)]",
+      SLACcitation   = "%%CITATION = SPHJA,5,749;%%"
+}
+
