[Silicon] comparison between the drift time for n-type and p-type carriers.

--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -574,6 +574,20 @@ And the diffusion sigma is given by,
   \label{eq:driftTimeIntegrated}
 \end{equation}
 
+The drift time depends on the charge carrier as shown in
+\cref{eq:driftTimeIntegrated}. \cref{fig:Drift_n_vs_p} compares the
+drift time for n and p-type carriers in a $50\,\micron$ thick silicon
+sensor with a depletion voltage of 4~V and biased at 15~V as a
+function of the depth. The electrons have a higher drift time and
+therefore are faster for readout. But the diffusion does not depend on
+the carrier or the bulk type.
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.5\textwidth]{figures/DriftTime_n_vs_p_carrier.pdf}
+  \caption{Drift time for n and p-type carriers as a function of the
+    depth in the sensor. The depletion voltage is 4~V and the bias
+    voltage is 15~V.}\label{fig:Drift_n_vs_p}
+\end{figure}
 
 \begin{table}[htpb]
   \centering
